--- a/test/js/index.html
+++ b/test/js/index.html
@@ -112,6 +112,7 @@
 </script>
 
 <!-- Widget sources (in order of concat)-->
+<script src="../../js/util/backdrop.js"></script>
 <script src="../../js/util.js"></script>
 <script src="../../js/drag.js"></script>
 <script src="../../js/collapse.js"></script>
@@ -148,6 +149,7 @@
 <script src="unit/tab-responsive.js"></script>
 <script src="unit/tooltip.js"></script>
 <script src="unit/util.js"></script>
+<script src="unit/util/backdrop.js"></script>
 
     <div id="qunit-container">
         <div id="qunit"></div>
