--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -11,6 +11,7 @@
 <script src="../../node_modules/jquery/dist/jquery.slim.min.js"></script>
 <script src="../../node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script type="text/javascript" src="../../js/util/backdrop.js"></script>
+<script type="text/javascript" src="../../js/util/scrollbar.js"></script>
 <script type="text/javascript" src="../../js/util.js"></script>
 <script type="text/javascript" src="../../js/drag.js"></script>
 <script type="text/javascript" src="../../js/collapse.js"></script>
