Breakout focustrap functionality

--- a/test/js/index.html
+++ b/test/js/index.html
@@ -113,6 +113,7 @@
 
 <!-- Widget sources (in order of concat)-->
 <script src="../../js/util/backdrop.js"></script>
+<script src="../../js/util/focustrap.js"></script>
 <script src="../../js/util/scrollbar.js"></script>
 <script src="../../js/util.js"></script>
 <script src="../../js/drag.js"></script>
@@ -152,6 +153,7 @@
 <script src="unit/util.js"></script>
 <script src="unit/util/backdrop.js"></script>
 <script src="unit/util/scrollbar.js"></script>
+<script src="unit/util/focustrap.js"></script>
 
     <div id="qunit-container">
         <div id="qunit"></div>
