Focuser utility: trap and flow variants (#806)
* Breakout focustrap functionality

* Drop focus option from modal

* WIP: Reinstate modal focus option, expand focustrap for tooltip, rename focuser utility

* WIP: Focuser working without injected helpers at start/end of container, radio input util, some cleanup

* Fix lint errors and unit tests - some unit tests are not implemeted 'correctly' due to having to use event simulation

* Update modal docs reagarding enforce focus

* Additional unit tests, clarify focus in modal docs

* Some migration notes

--- a/test/visual/dropdown.html
+++ b/test/visual/dropdown.html
@@ -11,6 +11,7 @@
 <script src="../../node_modules/jquery/dist/jquery.slim.min.js"></script>
 <script src="../../node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script src="../../js/util/backdrop.js"></script>
+<script src="../../js/util/focuser.js"></script>
 <script src="../../js/util/scrollbar.js"></script>
 <script src="../../js/util.js"></script>
 <script src="../../js/drag.js"></script>
