--- a/test/visual/modal.html
+++ b/test/visual/modal.html
@@ -11,6 +11,7 @@
 <script src="../../node_modules/jquery/dist/jquery.slim.min.js"></script>
 <script src="../../node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script src="../../js/util/backdrop.js"></script>
+<script src="../../js/util/focuser.js"></script>
 <script src="../../js/util/scrollbar.js"></script>
 <script src="../../js/util.js"></script>
 <script src="../../js/drag.js"></script>
@@ -78,7 +79,7 @@
                 <button type="button" class="close" data-cfw-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             </div>
             <div class="modal-body">
-                ...
+                This is a modal body.
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn" data-cfw-dismiss="modal">Close</button>
@@ -97,7 +98,7 @@
                 <button type="button" class="close" data-cfw-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             </div>
             <div class="modal-body">
-                ...
+                This is a modal body.
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn" data-cfw-dismiss="modal">Close</button>
@@ -188,7 +189,7 @@
                 <button type="button" class="close" data-cfw-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             </div>
             <div class="modal-body">
-                ...
+                This is a modal body.
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn" data-cfw-dismiss="modal">Close</button>
@@ -545,7 +546,7 @@
         <button type="button" class="close" data-cfw-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
       </div>
       <div class="modal-body">
-        ...
+        This is a modal body.
       </div>
       <div class="modal-footer">
         <button class="btn btn-primary" data-cfw="modal" data-cfw-modal-target="#modalChained2" data-cfw-modal-chain="#modalChained2">Open second chained modal</button>
@@ -561,7 +562,7 @@
         <button type="button" class="close" data-cfw-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
       </div>
       <div class="modal-body">
-        ...
+        This is a modal body.
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" onclick="$('#modalChained2').CFW_Modal('chain', '#modalChained1');">Open First chained modal</button>
@@ -607,7 +608,7 @@
             <button type="button" class="close" data-cfw-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           </div>
           <div class="modal-body">
-            ...
+            This is a modal body.
           </div>
         </div>
       </div>
