--- a/test/visual/scrollspy.html
+++ b/test/visual/scrollspy.html
@@ -11,6 +11,7 @@
 <script src="../../node_modules/jquery/dist/jquery.slim.min.js"></script>
 <script src="../../node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script src="../../js/util/backdrop.js"></script>
+<script src="../../js/util/focuser.js"></script>
 <script src="../../js/util/scrollbar.js"></script>
 <script src="../../js/util.js"></script>
 <script src="../../js/drag.js"></script>
