--- a/test/visual/tooltip.html
+++ b/test/visual/tooltip.html
@@ -11,6 +11,7 @@
 <script src="../../node_modules/jquery/dist/jquery.slim.min.js"></script>
 <script src="../../node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script src="../../js/util/backdrop.js"></script>
+<script src="../../js/util/focuser.js"></script>
 <script src="../../js/util/scrollbar.js"></script>
 <script src="../../js/util.js"></script>
 <script src="../../js/drag.js"></script>
@@ -72,8 +73,33 @@
             <div class="modal-body">
                 <button id="btnTest0" class="btn btn-primary" data-cfw="tooltip" data-cfw-tooltip-placement="forward" data-cfw-tooltip-trigger="click" title="Test">Test tooltip</button>
                 <p>This <button type="button"  class="btn" data-cfw="popover" title="A Title" data-cfw-popover-content="And here's some amazing content. It's very engaging. right?" data-cfw-popover-placement="forward">button</button> should trigger a popover on click.</p>
+                <fieldset>
+                        <legend class="ranking-legend">How well do you know this word?</legend>
+                        <div class="ranking">
+                            <div class="form-check form-checkradio">
+                                <input class="form-check-input" type="radio" id="ranking0-0" name="ranking0" aria-label="Never heard it">
+                                <label class="form-check-label" for="ranking0-0"></label>
+                                <label class="ranking-label" for="ranking0-0" aria-hidden="true">Never heard it</label>
+                            </div>
+                            <div class="form-check form-checkradio">
+                                <input class="form-check-input" type="radio" id="ranking0-1" name="ranking0" aria-label="Heard it">
+                                <label class="form-check-label" for="ranking0-1"></label>
+                                <label class="ranking-label" for="ranking0-1" aria-hidden="true">Heard it</label>
+                            </div>
+                            <div class="form-check form-checkradio">
+                                <input class="form-check-input" type="radio" id="ranking0-2" name="ranking0" aria-label="Know it">
+                                <label class="form-check-label" for="ranking0-2"></label>
+                                <label class="ranking-label" for="ranking0-2" aria-hidden="true">Know it</label>
+                            </div>
+                            <div class="form-check form-checkradio">
+                                <input class="form-check-input" type="radio" id="ranking0-3" name="ranking0" aria-label="Use it">
+                                <label class="form-check-label" for="ranking0-3"></label>
+                                <label class="ranking-label" for="ranking0-3" aria-hidden="true">Use it</label>
+                            </div>
+                        </div>
+                    </fieldset>
             </div>
-            <div class="modal-footer">
+            <div class="modal-footer" style="display: none;">
                 <button type="button" class="btn btn-secondary" data-cfw-dismiss="modal">Cancel</button>
                 <button type="button" class="btn btn-primary" id="save0">Save</button>
             </div>
