Add offcanvas widget

--- a/test/js/index.html
+++ b/test/js/index.html
@@ -123,6 +123,7 @@
 <script src="../../js/affix.js"></script>
 <script src="../../js/tooltip.js"></script>
 <script src="../../js/popover.js"></script>
+<script src="../../js/offcanvas.js"></script>
 <script src="../../js/modal.js"></script>
 <script src="../../js/accordion.js"></script>
 <script src="../../js/tab-responsive.js"></script>
@@ -143,6 +144,7 @@
 <script src="unit/equalize.js"></script>
 <script src="unit/lazy.js"></script>
 <script src="unit/modal.js"></script>
+<script src="unit/offcanvas.js"></script>
 <script src="unit/player.js"></script>
 <script src="unit/popover.js"></script>
 <script src="unit/scrollspy.js"></script>
@@ -152,8 +154,8 @@
 <script src="unit/tooltip.js"></script>
 <script src="unit/util.js"></script>
 <script src="unit/util/backdrop.js"></script>
-<script src="unit/util/scrollbar.js"></script>
 <script src="unit/util/focuser.js"></script>
+<script src="unit/util/scrollbar.js"></script>
 
     <div id="qunit-container">
         <div id="qunit"></div>
