--- a/test/visual/navbar.html
+++ b/test/visual/navbar.html
@@ -22,6 +22,7 @@
 <script src="../../js/affix.js"></script>
 <script src="../../js/tooltip.js"></script>
 <script src="../../js/popover.js"></script>
+<script src="../../js/offcanvas.js"></script>
 <script src="../../js/modal.js"></script>
 <script src="../../js/tab-responsive.js"></script>
 <script src="../../js/accordion.js"></script>
