--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -21,6 +21,7 @@
 <script type="text/javascript" src="../../js/affix.js"></script>
 <script type="text/javascript" src="../../js/tooltip.js"></script>
 <script type="text/javascript" src="../../js/popover.js"></script>
+<script type="text/javascript" src="../../js/offcanvas.js"></script>
 <script type="text/javascript" src="../../js/modal.js"></script>
 <script type="text/javascript" src="../../js/tab-responsive.js"></script>
 <script type="text/javascript" src="../../js/accordion.js"></script>
