Offcanvas navbar example title fix

--- a/site/4.2/examples/navbar-offcanvas/index.html
+++ b/site/4.2/examples/navbar-offcanvas/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Fixed Top Navbar Example</title>
+<title>Offcanvas Navbar Example</title>
 
 <!-- Figuration CSS -->
 <link rel="stylesheet" href="{{ site.path }}/assets/{{ version.docs }}/dist/css/figuration.min.css">
