Modal: Fix scrolling for overflowing modals

--- a/test/visual/modal.html
+++ b/test/visual/modal.html
@@ -602,6 +602,30 @@
 </nav>
     <!-- modal -->
     <div id="modal-root-example" class="modal">
+      <div class="modal-dialog modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title">Modal title</h4>
+            <button type="button" class="close" data-cfw-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          </div>
+          <div class="modal-body">
+            <h4>Overflowing text to show scroll behavior</h4>
+            <p>Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
+            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+            <p>Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Donec sed odio dui. Donec ullamcorper nulla non metus auctor fringilla.</p>
+            <p>Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
+            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+            <p>Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Donec sed odio dui. Donec ullamcorper nulla non metus auctor fringilla.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn" data-cfw-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="modal-root-centered" class="modal">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
@@ -647,6 +671,9 @@
 
   </div>
   <button type="button" class="btn btn-primary mt-3" data-cfw="modal" data-cfw-modal-target="#modal-root-example" data-cfw-modal-root-element="#another-element">
+    Show contained modal
+  </button>
+  <button type="button" class="btn btn-primary mt-3" data-cfw="modal" data-cfw-modal-target="#modal-root-centered" data-cfw-modal-root-element="#another-element">
     Show contained centered modal
   </button>
   <button type="button" class="btn btn-primary mt-3" data-cfw="modal" data-cfw-modal-target="#modal-root-scroll" data-cfw-modal-root-element="#another-element">
