--- a/test/visual/modal.html
+++ b/test/visual/modal.html
@@ -538,12 +538,14 @@
 </div>
 
 <!-- Modal chained example -->
-<button type="button" class="btn btn-primary" data-cfw="modal" data-cfw-modal-target="#modalChained1">Modal chained example</button>
+<p>
+    <button type="button" class="btn btn-primary" data-cfw="modal" data-cfw-modal-target="#modalChained1">Modal chained example</button>
+</p>
 <div class="modal" id="modalChained1">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <div class="modal-title">First chained modal</div>
+        <h4 class="modal-title">First chained modal</h4>
         <button type="button" class="close" data-cfw-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
       </div>
       <div class="modal-body">
@@ -559,7 +561,7 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <div class="modal-title">Second chained modal</div>
+        <h4 class="modal-title">Second chained modal</h4>
         <button type="button" class="close" data-cfw-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
       </div>
       <div class="modal-body">
@@ -567,6 +569,28 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" onclick="$('#modalChained2').CFW_Modal('chain', '#modalChained1');">Open First chained modal</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Manual modal example -->
+<p>
+    <button type="button" class="btn btn-primary" data-cfw="modal" data-cfw-modal-target="#modalManual" data-cfw-modal-manual="true">Manual modal</button>
+    <button type="button" class="btn btn-link" onclick="$('#modalManual').CFW_Modal('show'); return false;">show</button>
+</p>
+<div class="modal" id="modalManual">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Manual modal</h4>
+        <button type="button" class="close" data-cfw-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      </div>
+      <div class="modal-body">
+        This is a modal body.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" onclick="$('#modalManual').CFW_Modal('hide'); return false;">Hide</button>
       </div>
     </div>
   </div>
