Add `.sticky-bottom` positioning utility class
Also adds responsive variants.

--- a/test/visual/modal.html
+++ b/test/visual/modal.html
@@ -63,7 +63,7 @@
 
 <!-- `.sticky top` should not shift since it is not full width -->
 <div class="container sticky-top">
-	<nav class="navbar navbar-dark bg-dark">
+	<nav class="navbar navbar-dark bg-dark text-light">
 		<a class="navbar-brand" href="#">Sticky top</a> - no shift
 	</nav>
 </div>
@@ -703,6 +703,13 @@
   <button type="button" class="btn btn-primary mt-3" data-cfw="modal" data-cfw-modal-target="#modal-root-scroll" data-cfw-modal-root-element="#another-element">
     Show contained side aligned, scrollable modal
   </button>
+</div>
+
+<div class="sticky-bottom bg-dark text-light" style="z-index: 1020; bottom: 3.125rem;">
+    <div class="d-flex  flex-between p-1">
+        <span>Sticky bottom</span>
+        <span>Sticky bottom</span>
+    </div>
 </div>
 
 <p>Vivamus sollicitudin porttitor nisl, sed tempor leo. Maecenas ut rhoncus nisi. Morbi ut bibendum est. Donec tincidunt nec tellus a egestas. Donec id tortor elementum, aliquet magna euismod, commodo felis. Sed a nulla viverra, malesuada nisi a, fringilla velit. Donec justo felis, cursus eu justo ac, vehicula consequat mauris. Duis a interdum lectus, eu dictum nibh. Cras ligula velit, vehicula et luctus a, cursus quis sapien. Aenean a molestie libero. Nam congue ultrices turpis, sed tempus arcu malesuada sit amet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam eu ligula eleifend, rutrum purus id, pharetra enim. Pellentesque a posuere ex, ac egestas quam. Etiam lobortis massa at elementum consectetur. Nullam tempor orci quis ligula eleifend auctor.</p>
