Forms: Add `.form-check-reverse` modifier
Also adds an opinionated sizing for default checkbox and radio inputs so we can get the alignment correct.

--- a/test/visual/form-check.html
+++ b/test/visual/form-check.html
@@ -250,6 +250,46 @@
     <label class="form-check-label" for="resize2">Resized custom switch</label>
 </div>
 
+<h2>Reverse</h2>
+
+<div class="form-check form-check-reverse">
+  <input class="form-check-input" type="checkbox" value="" id="reverseCheck0">
+  <label class="form-check-label" for="reverseCheck0">Reverse default checkbox</label>
+</div>
+<div class="form-check form-checkradio form-check-reverse">
+  <input class="form-check-input" type="checkbox" value="" id="reverseCheck1">
+  <label class="form-check-label" for="reverseCheck1">Reverse custom checkbox</label>
+  <small class="text-muted d-block">Some additional help text could appear right here.</small>
+</div>
+<div class="form-check form-checkradio form-check-reverse">
+  <input class="form-check-input" type="checkbox" value="" id="reverseCheck2" disabled>
+  <label class="form-check-label" for="reverseCheck2">Disabled custom reverse checkbox</label>
+</div>
+
+<div class="form-check form-check-reverse">
+  <input class="form-check-input" type="radio" name="reverseRadio0" value="" id="reverseRadio0">
+  <label class="form-check-label" for="reverseRadio0">Reverse default radio</label>
+</div>
+<div class="form-check form-check-reverse">
+  <input class="form-check-input" type="radio" name="reverseRadio1" value="" id="reverseRadio1">
+  <label class="form-check-label" for="reverseRadio1">Reverse custom radio</label>
+</div>
+
+<div class="form-check form-switch form-check-reverse">
+  <input class="form-check-input" type="checkbox" id="reverseSwitch0">
+  <label class="form-check-label" for="reverseSwitch0">Reverse switch checkbox input</label>
+  <small class="text-muted d-block">Some additional help text could appear right here.</small>
+</div>
+<div class="form-check form-switch form-check-reverse">
+  <input class="form-check-input" type="radio" name="reverseSwitch" id="reverseSwitch1">
+  <label class="form-check-label" for="reverseSwitch1">Reverse switch radio input</label>
+</div>
+<div class="form-check form-switch form-check-reverse">
+  <input class="form-check-input" type="radio" name="reverseSwitch" id="reverseSwitch2">
+  <label class="form-check-label" for="reverseSwitch2">Reverse switch radio input</label>
+</div>
+
+
 </div>
 
 <script>
