Dropdown: Add center and middle alignments

--- a/test/visual/dropdown.html
+++ b/test/visual/dropdown.html
@@ -612,6 +612,76 @@ var setRTL = function() {
             </li>
         </ul>
     </div>
+
+    <br>
+
+    <div class="dropdown d-inline-block">
+        <button type="button" class="btn" data-cfw="dropdown">
+            Center Down<span class="caret" aria-hidden="true"></span>
+        </button>
+        <ul class="dropdown-menu dropcenter">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li>
+                <a href="#">Something else here</a>
+                <ul>
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Another action</a></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+
+    <div class="dropdown d-inline-block">
+        <button type="button" class="btn" data-cfw="dropdown">
+            Center Up<span class="caretup" aria-hidden="true"></span>
+        </button>
+        <ul class="dropdown-menu dropup dropcenter">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li>
+                <a href="#">Something else here</a>
+                <ul>
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Another action</a></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+
+    <div class="dropdown d-inline-block">
+        <button type="button" class="btn" data-cfw="dropdown">
+            Start Middle<span class="caretstart" aria-hidden="true"></span>
+        </button>
+        <ul class="dropdown-menu dropstart dropmiddle">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li>
+                <a href="#">Something else here</a>
+                <ul>
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Another action</a></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+
+    <div class="dropdown d-inline-block">
+        <button type="button" class="btn" data-cfw="dropdown" data-cfw-dropdown-container="#container">
+            End Middle<span class="caretend" aria-hidden="true"></span>
+        </button>
+        <ul class="dropdown-menu dropend dropmiddle">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li>
+                <a href="#">Something else here</a>
+                <ul>
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Another action</a></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
 </div>
 
 <div class="text-center p-1 m-2 border">
