--- a/test/visual/offcanvas.html
+++ b/test/visual/offcanvas.html
@@ -282,6 +282,39 @@ body {
     </button>
 </div>
 
+<hr >
+
+  <div class="alert alert-info d-none d-lg-block">Resize your browser to show the responsive offcanvas toggle.</div>
+
+  <button class="btn btn-primary d-lg-none" type="button" data-cfw="offcanvas" data-cfw-offcanvas-target="#offcanvasResponsive">Toggle offcanvas</button>
+
+  <div class="offcanvas-lg offcanvas-end" id="offcanvasResponsive">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title">Responsive offcanvas</h5>
+      <button type="button" class="close" data-cfw-dismiss="offcanvas" data-cfw-offcanvas-target="#offcanvasResponsive" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    </div>
+    <div class="offcanvas-body">
+      <p class="mb-0">This is content within an <code>.offcanvas-lg</code>.</p>
+    </div>
+  </div>
+
+<hr>
+
+<div id="offcanvasRootElementResponsive" class="bg-light border overflow-hidden position-relative" style="height: 200px; z-index: 1;">
+    <button class="btn btn-primary d-lg-none" type="button" data-cfw="offcanvas" data-cfw-offcanvas-target="#offcanvasContainedResponsive" data-cfw-offcanvas-root-element="#offcanvasRootElementResponsive">
+        Responsive Contained offcanvas
+    </button>
+    <div id="offcanvasContainedResponsive" class="offcanvas-lg offcanvas-start">
+        <div class="offcanvas-header">
+            <h4 class="offcanvas-title h5">Responsive Contained offcanvas</h4>
+            <button type="button" class="close" data-cfw-dismiss="offcanvas" data-cfw-offcanvas-target="#offcanvasContainedResponsive" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        </div>
+        <div class="offcanvas-body">
+            Responsive contained offcanvas content
+        </div>
+    </div>
+</div>
+
 <!------------------->
 
 <nav class="navbar navbar-light bg-light fixed-top">
