--- a/test/visual/offcanvas.html
+++ b/test/visual/offcanvas.html
@@ -86,7 +86,7 @@ body {
     <div class="dropdown mt-1">
       <button class="btn btn-secondary" type="button" data-cfw="dropdown">
         Dropdown button
-        <span class="caret aria-hidden="true"></span>
+        <span class="caret" aria-hidden="true"></span>
       </button>
       <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="#">Action</a></li>
@@ -109,7 +109,7 @@ body {
     <div class="dropdown mt-1">
       <button class="btn btn-secondary" type="button" data-cfw="dropdown">
         Dropdown button
-        <span class="caret aria-hidden="true"></span>
+        <span class="caret" aria-hidden="true"></span>
       </button>
       <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="#">Action</a></li>
@@ -315,8 +315,7 @@ body {
     </div>
 </div>
 
-<!------------------->
-
+<!-- ==========  -->
 <nav class="navbar navbar-light bg-light fixed-top">
   <div class="container-fluid flex-between">
     <a class="navbar-brand" href="#">Offcanvas navbar</a>
@@ -339,7 +338,7 @@ body {
           <li class="nav-item dropdown">
             <a class="nav-link" href="#" role="button" data-cfw="dropdown">
               Dropdown
-              <span class="caret aria-hidden="true"></span>
+              <span class="caret" aria-hidden="true"></span>
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#">Action</a></li>
@@ -382,7 +381,7 @@ body {
           <li class="nav-item dropdown">
             <a class="nav-link" href="#" role="button" data-cfw="dropdown">
               Dropdown
-              <span class="caret aria-hidden="true"></span>
+              <span class="caret" aria-hidden="true"></span>
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#">Action</a></li>
