Switch to Alolia DocSearch v3 for v4.3.x
Older doc versions not being updated to new search.

--- a/site/versions.html
+++ b/site/versions.html
@@ -3,6 +3,7 @@ layout: doc
 title: Versions
 description: Available hosted version of Figuration documentation.
 toc: false
+search: false
 ---
 
 {%- for group in versions %}
