Input Group: Fix static input width

--- a/test/visual/input-group.html
+++ b/test/visual/input-group.html
@@ -398,6 +398,45 @@
 </div>
 
 
+<h2>Input group size w/ static input</h2>
+<div class="row">
+    <label for="formStaticSize0" class="col-3 form-label">My Label</label>
+    <div class="col-9">
+        <span class="input-group">
+            <input id="formStaticSize0" type="text" value="My Text" class="form-control" readonly />
+            <a href="#" class="btn btn-primary">View Details</a>
+        </span>
+    </div>
+</div>
+<div class="row">
+    <label for="formStaticSize1" class="col-3 form-label">My Label</label>
+    <div class="col-9">
+        <span class="input-group">
+            <input id="formStaticSize1" type="text" value="My Text" class="form-control-static" readonly />
+            <a href="#" class="btn btn-primary">View Details</a>
+        </span>
+    </div>
+</div>
+<div class="row">
+    <label for="formStaticSize2" class="col-3 form-label form-label-small">My Label</label>
+    <div class="col-9">
+        <span class="input-group">
+            <input id="formStaticSize2" type="text" value="My Text" class="form-control-static form-label-small" readonly />
+            <a href="#" class="btn btn-primary btn-small">View Details</a>
+        </span>
+    </div>
+</div>
+<div class="row">
+    <label for="formStaticSize3" class="col-3 form-label form-label-large">My Label</label>
+    <div class="col-9">
+        <span class="input-group">
+            <input id="formStaticSize3" type="text" value="My Text" class="form-control-static form-label-large" readonly />
+            <a href="#" class="btn btn-primary btn-large">View Details</a>
+        </span>
+    </div>
+</div>
+
+
 <h2>Margin Check</h2>
 
 <form class="mb-1">
