HTML markup fixes

--- a/test/visual/dropdown.html
+++ b/test/visual/dropdown.html
@@ -785,10 +785,10 @@ var setRTL = function() {
 <hr>
 
 <div class="dropdown mb-1">
-    <button id="dropdown0" class="btn btn-info" type="button" data-cfw="dropdown">
+    <button id="dropdown0_btn" class="btn btn-info" type="button" data-cfw="dropdown">
         Nested Dropdown using buttons<span class="caret" aria-hidden="true"></span>
     </button>
-    <ul id="dropdown0_menu" class="dropdown-menu">
+    <ul id="dropdown0_btn_menu" class="dropdown-menu">
         <li><button type="button" class="dropdown-item">Button</button></li>
         <li>
             <button type="button" class="dropdown-item">Submenu Button</button>
