--- a/site/index.html
+++ b/site/index.html
@@ -27,9 +27,9 @@ layout: home
           </div>
           <div class="col-12 mt-1">
             Current version: <strong>v{{ site.version.current }}</strong>
-            <br />
+            <br>
             <a href="{{ site.changelog }}" class="text-light small">Read the Changelog</a>
-            <br />
+            <br>
             <a href="{{ site.path }}/{{ site.version.docs }}/get-started/migration/" class="text-light small">View migration notes</a>
           </div>
         </div>
@@ -145,13 +145,13 @@ layout: home
     </div>
     <div class="col-md-6 col-lg-7 home-feature">
       <ul class="list list-horizontal flex-wrap flex-center text-center small mt-0_5 mt-md-0">
-        <li class="list-item"><img src="{{ site.path }}/assets/img/chrome.png" class="d-block" alt="" />Chrome</li>
-        <li class="list-item"><img src="{{ site.path }}/assets/img/firefox.png" class="d-block" alt="" />Firefox</li>
-        <li class="list-item"><img src="{{ site.path }}/assets/img/internet-explorer.png" class="d-block" alt="" />IE 11+</li>
-        <li class="list-item"><img src="{{ site.path }}/assets/img/edge.png" class="d-block" alt="" />Edge</li>
-        <li class="list-item"><img src="{{ site.path }}/assets/img/safari.png" class="d-block" alt="" />Safari</li>
-        <li class="list-item"><img src="{{ site.path }}/assets/img/android.png" class="d-block" alt="" />Android 6+</li>
-        <li class="list-item"><img src="{{ site.path }}/assets/img/opera.png" class="d-block" alt="" />Opera</li>
+        <li class="list-item"><img src="{{ site.path }}/assets/img/chrome.png" class="d-block" alt="">Chrome</li>
+        <li class="list-item"><img src="{{ site.path }}/assets/img/firefox.png" class="d-block" alt="">Firefox</li>
+        <li class="list-item"><img src="{{ site.path }}/assets/img/internet-explorer.png" class="d-block" alt="">IE 11+</li>
+        <li class="list-item"><img src="{{ site.path }}/assets/img/edge.png" class="d-block" alt="">Edge</li>
+        <li class="list-item"><img src="{{ site.path }}/assets/img/safari.png" class="d-block" alt="">Safari</li>
+        <li class="list-item"><img src="{{ site.path }}/assets/img/android.png" class="d-block" alt="">Android 6+</li>
+        <li class="list-item"><img src="{{ site.path }}/assets/img/opera.png" class="d-block" alt="">Opera</li>
       </ul>
     </div>
   </div>
