--- a/test/visual/dropdown.html
+++ b/test/visual/dropdown.html
@@ -309,7 +309,7 @@ var setRTL = function() {
             <li>
               <div class="dropdown-text">
                 <label for="input1" class="sr-only">Example input</label>
-                <input type="text" id="input1" class="form-control" placeholder="text input"/>
+                <input type="text" id="input1" class="form-control" placeholder="text input">
               </div>
             </li>
             <li>
