--- a/test/visual/grid.html
+++ b/test/visual/grid.html
@@ -417,7 +417,7 @@
     </div>
 </div>
 
-<hr class="my-2" />
+<hr class="my-2">
 
 <div class="container">
   <h2>Individual grid classes should override <code>.row-cols-*</code></h2>
