--- a/test/visual/input-group.html
+++ b/test/visual/input-group.html
@@ -403,7 +403,7 @@
     <label for="formStaticSize0" class="col-3 form-label">My Label</label>
     <div class="col-9">
         <span class="input-group">
-            <input id="formStaticSize0" type="text" value="My Text" class="form-control" readonly />
+            <input id="formStaticSize0" type="text" value="My Text" class="form-control" readonly>
             <a href="#" class="btn btn-primary">View Details</a>
         </span>
     </div>
@@ -412,7 +412,7 @@
     <label for="formStaticSize1" class="col-3 form-label">My Label</label>
     <div class="col-9">
         <span class="input-group">
-            <input id="formStaticSize1" type="text" value="My Text" class="form-control-static" readonly />
+            <input id="formStaticSize1" type="text" value="My Text" class="form-control-static" readonly>
             <a href="#" class="btn btn-primary">View Details</a>
         </span>
     </div>
@@ -421,7 +421,7 @@
     <label for="formStaticSize2" class="col-3 form-label form-label-small">My Label</label>
     <div class="col-9">
         <span class="input-group">
-            <input id="formStaticSize2" type="text" value="My Text" class="form-control-static form-label-small" readonly />
+            <input id="formStaticSize2" type="text" value="My Text" class="form-control-static form-label-small" readonly>
             <a href="#" class="btn btn-primary btn-small">View Details</a>
         </span>
     </div>
@@ -430,7 +430,7 @@
     <label for="formStaticSize3" class="col-3 form-label form-label-large">My Label</label>
     <div class="col-9">
         <span class="input-group">
-            <input id="formStaticSize3" type="text" value="My Text" class="form-control-static form-label-large" readonly />
+            <input id="formStaticSize3" type="text" value="My Text" class="form-control-static form-label-large" readonly>
             <a href="#" class="btn btn-primary btn-large">View Details</a>
         </span>
     </div>
