List: Fix horizontal group border radius and margin

--- a/test/visual/list.html
+++ b/test/visual/list.html
@@ -387,6 +387,10 @@
     <li class="list-item">List item</li>
 </ul>
 
+<ul class="list list-horizontal list-group">
+    <li class="list-item">List item</li>
+</ul>
+
 <h2>Spaced</h2>
 <ul class="list list-spaced-y list-divided">
     <li class="list-item">List item</li>
@@ -406,6 +410,10 @@
     <div class="list-item">List item</div>
 </div>
 
+<div class="list list-spaced list-group">
+    <div class="list-item">List item</div>
+</div>
+
 <ul class="list list-horizontal list-spaced-x list-divided">
     <li class="list-item">List item</li>
     <li class="list-item">List item</li>
@@ -421,6 +429,10 @@
 <ul class="list list-horizontal list-spaced-x list-group">
     <li class="list-item">List item</li>
     <li class="list-item">List item</li>
+    <li class="list-item">List item</li>
+</ul>
+
+<ul class="list list-horizontal list-spaced-x list-group">
     <li class="list-item">List item</li>
 </ul>
 
